@@ -64,6 +64,9 @@ Release 2.8.0 - UNRELEASED
     
     MAPREDUCE-6405. NullPointerException in App Attempts page.
     (Siqi Li and Gera Shegalov via devaraj)
+    
+    MAPREDUCE-6419. JobHistoryServer doesn't sort properly based on Job ID when Job id's
+    exceed 9999. (Mohammad Shahid Khan via rohithsharmaks)
 
 Release 2.7.3 - UNRELEASED
  
